# RawNNX

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile  pyproject.toml
api/rawnnx/: api.h
cmake/: CompileOptions.cmake  Dependencies.cmake  Format.cmake  PreventInSourceBuilds.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
demo/: .clang-tidy  CMakeLists.txt  birefnet_demo.cc  depth_anything_demo.cc  face_parsing_pytorch_demo.cc  mobilesam_demo.cc  modnet_demo.cc  onnxdump.cc  sam_hq_demo.cc  u2net_demo.cc  yunet_demo.cc
sandbox/: CMakeLists.txt  imagearea.cc  imagearea.h  main.cc  mainwindow.cc  mainwindow.h
scripts/: change_onnx_names.py
scripts/onnx_export/: pyproject.toml
scripts/onnx_export/face-parsing_PyTorch/: export_onnx_model.py  model.py
scripts/onnx_export/sam-hq/: export_encoder_onnx_model.py  onnx_image_encoder.py
scripts/onnx_export/u2net/: export_onnx_model.py
src/: cpputil.h  debug.cc  debug.h  rawnnx.cc
