[project]
name = "export"
description = "Exporting ONNX models for image processing"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.8",
    "scikit-image>=0.25.2",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]
vitmatte = [
    "detectron2",
    "fairscale>=0.4.13",
]
sam2 = [
    "sam-2",
]
sam-hq = []
mobilesam = []

[tool.uv]
conflicts = [
    [
        { extra = "vitmatte" },
        { extra = "sam2" },
    ],
]

[tool.uv.sources]
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
